# TravelMate

./: .env.example  .eslintrc.json  .gitignore  package-lock.json  package.json
apps/api/: .env  alembic.ini  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/agents/: memory.py  orchestrator.py  state.py  train_agent.py
apps/api/app/agents/nodes/: budget_node.py  bus_node.py  fallback_node.py  geocode_node.py  hotel_node.py  plan_transport_node.py  synthesis_node.py  temple_node.py  train_node.py  validate_node.py  weather_node.py
apps/api/app/agents/tools/: budget_tools.py  bus_tools.py  hotel_tools.py  map_tools.py  temple_tools.py  train_tools.py  weather_tools.py
apps/api/app/api/v1/: __init__.py  api.py  chat.py  geocode.py  router.py  temples.py  trains.py  trips.py
apps/api/app/api/v1/endpoints/: trips.py
apps/api/app/core/: api_errors.py  config.py  dependencies.py
apps/api/app/domain/models/: railradar.py  train.py
apps/api/app/domain/repositories/: railway_repository.py
apps/api/app/infrastructure/cache/: cache_keys.py  cache_service.py  redis_client.py
apps/api/app/infrastructure/database/: connection.py  models.py
apps/api/app/infrastructure/railradar/: cache.py  client.py  exceptions.py  mapper.py  railradar_service.py  schemas.py
apps/api/app/repositories/: temple_repository.py
apps/api/app/services/: temple_service.py  trip_planning_service.py
apps/api/migrations/: env.py
apps/api/scripts/: seed_temples.py  warm_phase2_cache.py
apps/api/tests/unit/infrastructure/: test_railway_service.py
(+112 files in other folders)
