[tool.poetry]
name = "api"
version = "0.1.0"
description = "TravelMate AI Backend API"
authors = ["Engineering Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
httpx = "^0.27.2"
redis = "^5.0.8"
langgraph = "^0.2.2"
langchain = "^0.2.14"
langchain-google-genai = "^1.0.8"
google-generativeai = "^0.7.2"
tenacity = "^8.3.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
